:art: Creating initial index and others additions

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,3 +1,17 @@
-// app global css in Sass form
+
+@font-face
+  font-family: Lolapeluza
+  src: url(../statics/fonts/Lolapeluza.ttf)
+
+@font-face
+  font-family: PraterSansBold
+  src: url(../statics/fonts/PraterSansBold.ttf)
+
 .flex-1
-  flex 1
+  flex: 1
+
+.text-prater
+  font-family: PraterSansBold
+
+.text-lolapeluza
+  font-family: Lolapeluza
