:art: Creating initial festival config component

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -15,3 +15,27 @@
 
 .text-lolapeluza
   font-family: Lolapeluza
+
+// Animation
+
+@keyframes pop
+  0%
+    opacity: 0
+    transform: scale(.7)
+  70%
+    opacity: 1
+    transform: scale(1.07)
+  100%
+    transform: scale(1)
+
+@keyframes: fade
+  0%
+    opacity: 0
+  100%
+    opacity: 1
+
+.animate-pop
+  animation: pop .2s
+
+.animate-fade
+  animation: fade .2s
