:art: Adding config to change lineup name color

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -25,6 +25,9 @@
 .position-relative
   position: relative
 
+.q-dialog__backdrop
+  background: rgba(0, 0, 0, 0.5)
+
 // Animation
 
 @keyframes pop
