--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -46,8 +46,29 @@
   100%
     opacity: 1
 
+@keyframes pulse
+  0%
+    transform: scale(.9)
+  70%
+    transform: scale(1)
+    box-shadow: 0 0 0 50px rgba(#333, 0)
+  100%
+    transform: scale(.9)
+    box-shadow: 0 0 0 0 rgba(#333, 0)
+
 .animate-pop
   animation: pop .2s
 
 .animate-fade
   animation: fade .2s
+
+.animate-pulse
+  cursor: pointer
+  box-shadow: 0 0 0 rgba(200, 200, 200, 0.6)
+  animation: pulse 2s infinite
+
+  &:hover
+    animation: none !important
+
+.animate-none
+  animation: none !important
