:sparkles: Create username component and others changes

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -7,6 +7,10 @@
   font-family: PraterSansBold
   src: url(../statics/fonts/PraterSansBold.ttf)
 
+@font-face
+  font-family: SilkySmoke
+  src: url(../statics/fonts/SilkySmoke.ttf)
+
 .flex-1
   flex: 1
 
@@ -15,6 +19,9 @@
 
 .text-lolapeluza
   font-family: Lolapeluza
+
+.text-silkysmoke
+  font-family: SilkySmoke
 
 .lineup__container
   width: 800px
