Add festival name font feature

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -11,6 +11,10 @@
   font-family: SilkySmoke
   src: url(../statics/fonts/SilkySmoke.ttf)
 
+@font-face
+  font-family: TheMachinatos
+  src: url(../statics/fonts/TheMachinatos.ttf)
+
 .flex-1
   flex: 1
 
@@ -22,6 +26,10 @@
 
 .text-silkysmoke
   font-family: SilkySmoke
+
+.text-themachinatos
+  font-family: TheMachinatos
+  // text-transform: uppercase
 
 .lineup__container
   width: 800px
